# sparkplug-cpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Dockerfile.ubuntu  Doxyfile  LICENSE-APACHE  LICENSE-MIT  README.md  TLS_SETUP.md
.github/workflows/: ci.yml  docs.yml  release-arm64.yml  release-x86_64.yml  release.yml  release.yml.bak
certs/: .gitignore  README.md  generate_certs.sh  mosquitto_test.conf  passwordfile  start_mosquitto_test.sh
cmake/: Package.cmake  StaticBundle.cmake
docs/: PACKAGING.md  SPARKPLUG_PROTOCOL_SPEC.md
docs/html/: annotated.html  annotated_dup.js  classes.html  classsparkplug_1_1MQTTAsyncHandle-members.html  classsparkplug_1_1MQTTAsyncHandle.html  classsparkplug_1_1PayloadBuilder-members.html  classsparkplug_1_1PayloadBuilder.html  classsparkplug_1_1PayloadBuilder.js  classsparkplug_1_1Publisher-members.html  classsparkplug_1_1Publisher.html  classsparkplug_1_1Publisher.js  classsparkplug_1_1Subscriber-members.html  classsparkplug_1_1Subscriber.html  classsparkplug_1_1Subscriber.js  concepts.html  concepts.js  conceptsparkplug_1_1SparkplugBoolean.html  conceptsparkplug_1_1SparkplugFloat.html  conceptsparkplug_1_1SparkplugInteger.html  conceptsparkplug_1_1SparkplugMetricType.html  conceptsparkplug_1_1SparkplugNumeric.html  conceptsparkplug_1_1SparkplugSignedInteger.html  conceptsparkplug_1_1SparkplugString.html  conceptsparkplug_1_1SparkplugUnsignedInteger.html  datatype_8hpp_source.html  dir_26fc570f2f63b8bdd2329b9d1125bacf.html  dir_26fc570f2f63b8bdd2329b9d1125bacf.js  dir_26fc570f2f63b8bdd2329b9d1125bacf_dep.map  dir_26fc570f2f63b8bdd2329b9d1125bacf_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen.css  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  globals_type.html  (+30 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  concepts_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  pages_0.js  (+27 more)
examples/: CMakeLists.txt  command_handling_example.cpp  host_application_basic.cpp  host_application_basic_c.c  host_application_debug.cpp  host_application_example.cpp  host_application_mimic.cpp  host_application_mimic_debug.cpp  host_application_multi_group_cli.cpp  minimal_host.cpp  minimal_host_c.c  publisher_device_example.cpp  publisher_dynamic_metrics.cpp  publisher_example.cpp  publisher_example_c.c  publisher_mimic.cpp  publisher_tls_example.cpp  subscriber_example.cpp  subscriber_example_c.c  subscriber_example_debug.cpp  subscriber_multi_group_cli.cpp  subscriber_tls_example.cpp  tck_edge_node.cpp  tck_edge_node.hpp  tck_edge_node_main.cpp  tck_host_application.cpp  tck_host_application.hpp  tck_host_application_main.cpp  tck_test_runner.cpp  tck_test_runner.hpp  test_auth_combined.cpp  test_auth_combined_c.c  test_auth_mtls.cpp  test_auth_password.cpp  torture_test_host_application.cpp  torture_test_publisher.cpp  torture_test_subscriber.cpp
include/sparkplug/: datatype.hpp  edge_node.hpp  host_application.hpp  logging.hpp  mqtt_handle.hpp  payload_builder.hpp  publisher.hpp  sparkplug_c.h  subscriber.hpp  topic.hpp
include/sparkplug/detail/: compat.hpp
proto/: CMakeLists.txt
scripts/: build_release_package.sh  build_static_musl.sh  build_ubuntu24_package.sh  format.sh  tidy.sh
src/: CMakeLists.txt  c_bindings.cpp  edge_node.cpp  host_application.cpp  payload_builder.cpp  publisher.cpp  subscriber.cpp  topic.cpp
tests/: CMakeLists.txt  soak_test.cpp  test_c_api.c  test_c_bindings_timestamps.cpp  test_command_handling.cpp  test_compliance.cpp  test_device_apis.cpp  test_error_handling.cpp  test_move_constructor_race.cpp  test_mutex_escaping_refs.cpp  test_payload_builder.cpp  test_state_json_parsing.cpp  test_state_publish_deadlock.cpp  test_topic.cpp
