# examples/CMakeLists.txt
add_executable(publisher_example publisher_example.cpp)
target_link_libraries(publisher_example PRIVATE sparkplug_cpp)

add_executable(publisher_dynamic_metrics publisher_dynamic_metrics.cpp)
target_link_libraries(publisher_dynamic_metrics PRIVATE sparkplug_cpp)

add_executable(publisher_device_example publisher_device_example.cpp)
target_link_libraries(publisher_device_example PRIVATE sparkplug_cpp)

add_executable(command_handling_example command_handling_example.cpp)
target_link_libraries(command_handling_example PRIVATE sparkplug_cpp)

add_executable(host_application_example host_application_example.cpp)
target_link_libraries(host_application_example PRIVATE sparkplug_cpp)

add_executable(host_application_mimic host_application_mimic.cpp)
target_link_libraries(host_application_mimic PRIVATE sparkplug_cpp)

add_executable(minimal_host minimal_host.cpp)
target_link_libraries(minimal_host PRIVATE sparkplug_cpp)

add_executable(host_application_basic host_application_basic.cpp)
target_link_libraries(host_application_basic PRIVATE sparkplug_cpp)

add_executable(host_application_debug host_application_debug.cpp)
target_link_libraries(host_application_debug PRIVATE sparkplug_cpp)

add_executable(host_application_mimic_debug host_application_mimic_debug.cpp)
target_link_libraries(host_application_mimic_debug PRIVATE sparkplug_cpp)

add_executable(publisher_mimic publisher_mimic.cpp)
target_link_libraries(publisher_mimic PRIVATE sparkplug_cpp)

add_executable(host_application_multi_group_cli host_application_multi_group_cli.cpp)
target_link_libraries(host_application_multi_group_cli PRIVATE sparkplug_cpp)

add_executable(publisher_tls_example publisher_tls_example.cpp)
target_link_libraries(publisher_tls_example PRIVATE sparkplug_cpp)

add_executable(host_application_tls host_application_tls.cpp)
target_link_libraries(host_application_tls PRIVATE sparkplug_cpp)

# Authentication test examples
add_executable(test_auth_password test_auth_password.cpp)
target_link_libraries(test_auth_password PRIVATE sparkplug_cpp)

add_executable(test_auth_mtls test_auth_mtls.cpp)
target_link_libraries(test_auth_mtls PRIVATE sparkplug_cpp)

add_executable(test_auth_combined test_auth_combined.cpp)
target_link_libraries(test_auth_combined PRIVATE sparkplug_cpp)

# Torture test examples
add_executable(torture_test_publisher torture_test_publisher.cpp)
target_link_libraries(torture_test_publisher PRIVATE sparkplug_cpp)

add_executable(torture_test_host_application torture_test_host_application.cpp)
target_link_libraries(torture_test_host_application PRIVATE sparkplug_cpp)

# C API examples
add_executable(publisher_example_c publisher_example_c.c)
target_link_libraries(publisher_example_c PRIVATE sparkplug_c)

add_executable(host_application_basic_c host_application_basic_c.c)
target_link_libraries(host_application_basic_c PRIVATE sparkplug_c)

add_executable(minimal_host_c minimal_host_c.c)
target_link_libraries(minimal_host_c PRIVATE sparkplug_c)

add_executable(test_auth_combined_c test_auth_combined_c.c)
target_link_libraries(test_auth_combined_c PRIVATE sparkplug_c)

# TCK (Test Compatibility Kit) Host Application
add_executable(tck_host_application
  tck_host_application.cpp
  tck_host_application_main.cpp)
target_link_libraries(tck_host_application PRIVATE sparkplug_cpp)
